# etf-holding-mcp

./: README.md  pyproject.toml
src/etf_holdings_mcp/: __init__.py  scraper.py  server.py
src/etf_holdings_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
