[project]
name = "etf-holdings-mcp"
version = "0.1.0"
description = "MCP server exposing ETF top-10 holdings scraped from Morningstar"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
]

[project.scripts]
etf-holdings-mcp = "etf_holdings_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
